apps/base/home-zigbee2mqtt/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
spec:
  ports:
  - port: 8080
    name: http
    targetPort: http
  selector:
    app.kubernetes.io/name: zigbee2mqtt
    app.kubernetes.io/component: zigbee2mqtt
