apps/base/home-zigbee2mqtt/deploy/networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-zigbee2mqtt
spec:
  types: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/name: zigbee2mqtt
      app.kubernetes.io/component: zigbee2mqtt

  ingress:
    # Allow http from the ingress controller
    - ports:
        - port: http
      from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
